test/errhandling/nspark/record-deinit-throws.good
record-deinit-throws.chpl:12: error: deinit is not permitted to throw
